Segfault when *border selecting* markers in the "graph" mode #36605

Closed
opened 2013-08-29 23:47:54 +02:00 by Dalai Felinto · 3 comments

%%%OSX 10.8 rev. 59

  1. Open attached .blend file (you may need sofia.mov from "Match, Track & Blend" but likely not).
  2. Select (B) a few of the curves
  3. BOOOOOM

Note, it doesn't happen every time I select the curves, but attached is an example of
one of the selections that caused the problem.

How to reproduce from scratch:


  1. open the 'sofia.mov' video (not here, let me know if you need)
  2. click 'features detection' (I changed the values a bit but shouldn't matter)
  3. track a bit (Ctrl+T)
  4. switch the view mode to Graphs
  5. border select the markers (B)

Backtrace


  • 0 0x0000000100298c02 in clip_graph_tracking_values_iterate_track (sc=0x11cfb8268, track=0x0, userdata=0x7fff5fbff500, func=0x100292c50 <border_select_cb>, segment_start=0, segment_end=0) at clip_utils.c:82
  • 1 0x0000000100292f01 in border_select_graph_exec (C=0x10b328ba8, op=0x10c643e68) at clip_graph_ops.c:365
  • 2 0x00000001000ffa8d in border_apply (C=0x10b328ba8, op=0x10c643e68, gesture_mode=3) at wm_operators.c:2743
  • 3 0x00000001000ffe25 in WM_border_select_modal (C=0x10b328ba8, op=0x10c643e68, event=0x118ebd0d8) at wm_operators.c:2810
  • 4 0x00000001000e72a3 in wm_handler_operator_call (C=0x10b328ba8, handlers=0x11cfa1918, handler=0x10c639028, event=0x118ebd0d8, properties=0x0) at wm_event_system.c:1503
  • 5 0x00000001000e82d5 in wm_handlers_do_intern (C=0x10b328ba8, event=0x118ebd0d8, handlers=0x11cfa1918) at wm_event_system.c:1903
  • 6 0x00000001000e83fb in wm_handlers_do (C=0x10b328ba8, event=0x118ebd0d8, handlers=0x11cfa1918) at wm_event_system.c:1940
  • 7 0x00000001000e8f41 in wm_event_do_handlers (C=0x10b328ba8) at wm_event_system.c:2186
  • 8 0x00000001000db984 in WM_main (C=0x10b328ba8) at wm.c:459
  • 9 0x00000001000da996 in main (argc=1, argv=0x7fff5fbff998) at creator.c:1673%%%
%%%OSX 10.8 rev. 59 1) Open attached .blend file (you may need sofia.mov from "Match, Track & Blend" but likely not). 2) Select (B) a few of the curves 3) BOOOOOM Note, it doesn't happen every time I select the curves, but attached is an example of one of the selections that caused the problem. How to reproduce from scratch: **** 1) open the 'sofia.mov' video (not here, let me know if you need) 2) click 'features detection' (I changed the values a bit but shouldn't matter) 3) track a bit (Ctrl+T) 4) switch the view mode to Graphs 5) border select the markers (B) Backtrace **** - 0 0x0000000100298c02 in clip_graph_tracking_values_iterate_track (sc=0x11cfb8268, track=0x0, userdata=0x7fff5fbff500, func=0x100292c50 <border_select_cb>, segment_start=0, segment_end=0) at clip_utils.c:82 - 1 0x0000000100292f01 in border_select_graph_exec (C=0x10b328ba8, op=0x10c643e68) at clip_graph_ops.c:365 - 2 0x00000001000ffa8d in border_apply (C=0x10b328ba8, op=0x10c643e68, gesture_mode=3) at wm_operators.c:2743 - 3 0x00000001000ffe25 in WM_border_select_modal (C=0x10b328ba8, op=0x10c643e68, event=0x118ebd0d8) at wm_operators.c:2810 - 4 0x00000001000e72a3 in wm_handler_operator_call (C=0x10b328ba8, handlers=0x11cfa1918, handler=0x10c639028, event=0x118ebd0d8, properties=0x0) at wm_event_system.c:1503 - 5 0x00000001000e82d5 in wm_handlers_do_intern (C=0x10b328ba8, event=0x118ebd0d8, handlers=0x11cfa1918) at wm_event_system.c:1903 - 6 0x00000001000e83fb in wm_handlers_do (C=0x10b328ba8, event=0x118ebd0d8, handlers=0x11cfa1918) at wm_event_system.c:1940 - 7 0x00000001000e8f41 in wm_event_do_handlers (C=0x10b328ba8) at wm_event_system.c:2186 - 8 0x00000001000db984 in WM_main (C=0x10b328ba8) at wm.c:459 - 9 0x00000001000da996 in main (argc=1, argv=0x7fff5fbff998) at creator.c:1673%%%
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev59651. Thanks for the report, closing.%%%

%%%Fixed in svn rev59651. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36605
No description provided.