Fix #36605: Segfault when border selecting markers in the "graph" mode when no track is active